force-app/main/default/objects/Opportunity/fields/Dynamics_GP_Version__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_GP_Version__c</fullName>
    <label>GP Environment/Access Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2018 R2</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2018</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2016 R2</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2016</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2015 R2</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2015 RTM</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2013 R2</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2013</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2010 R2</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 10.0</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics GP 9.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>