force-app/main/default/objects/Opportunity/fields/EB_Access__c.field-meta.xml
<CustomField>
    <fullName>EB_Access__c</fullName>
    <label>EB Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>