force-app/main/default/objects/Opportunity/fields/EB_Status__c.field-meta.xml
<CustomField>
    <fullName>EB_Status__c</fullName>
    <label>EB Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>