force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify the company&apos;s economic buyer (decision maker, signing authority)</description>
    <inlineHelpText>Identify the company&apos;s economic buyer (decision maker, signing authority)</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>