force-app/main/default/objects/Opportunity/fields/EF_Description__c.field-meta.xml
<CustomField>
    <fullName>EF_Description__c</fullName>
    <formula>&quot;They have the experience internally and are willing to train resources to be successful with our product or solution&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EF Description</label>
    <type>Text</type>
</CustomField>