force-app/main/default/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <formula>IF( Opportunity_Record_Type_V2__c = &apos;Standard&apos;  &amp;&amp;   ISBLANK(Partner__c)  ,  Account.Name ,  IF( Opportunity_Record_Type_V2__c = &apos;Reseller&apos;,  Parent_Opp_Account_Name__c ,  IF(Opportunity_Record_Type_V2__c = &apos;Standard&apos;  &amp;&amp;    NOT(ISBLANK(Partner__c)) ,  Account.Name , NULL) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer</label>
    <type>Text</type>
</CustomField>