force-app/main/default/objects/Opportunity/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Customer Name Test)</relationshipLabel>
    <relationshipName>End_Customer_Name_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>