force-app/main/default/objects/Opportunity/fields/End_Customer_Name_Intacct__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name_Intacct__c</fullName>
    <description>This pulls in the End Customer Name from the Parent Opportunity, if a Parent Opportunity exists. If there is no Parent Opportunity, it will pull in the name of the End Customer Name from the Opportunity Record. 


This field exists so that it can be synced to Intacct.</description>
    <formula>IF
(NOT
 (ISBLANK
  ( Parent_Opportunity__c )), Parent_Opportunity__r.Account.Name,  Account.Name )</formula>
    <label>End Customer Name Intacct</label>
    <type>Text</type>
</CustomField>