force-app/main/default/objects/Opportunity/fields/End_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Number__c</fullName>
    <formula>Parent_Opportunity__r.Account.ia_crm__IntacctID__c</formula>
    <label>End Customer Number</label>
    <type>Text</type>
</CustomField>