force-app/main/default/objects/Opportunity/fields/Engagement_with_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Engagement_with_Business_Owner__c</fullName>
    <label>Engagement with Business Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular cadence with approver</fullName>
            </value>
            <value>
                <fullName>Cadence with lower level employee</fullName>
            </value>
            <value>
                <fullName>Business owner not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>