force-app/main/default/objects/Opportunity/fields/Enhancement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Amount__c</fullName>
    <formula>Account.Total_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>