force-app/main/default/objects/Opportunity/fields/Enhancement_ARR_Opp_MFC__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_ARR_Opp_MFC__c</fullName>
    <defaultValue>00.00</defaultValue>
    <label>Enhancement ARR (Opp)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>