force-app/main/default/objects/Opportunity/fields/Enhancement_Status__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Status__c</fullName>
    <formula>Account.Enhancement_Status_Formula_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhancement Status</label>
    <type>Text</type>
</CustomField>