force-app/main/default/objects/Opportunity/fields/Enhancement_Total_Annual__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Total_Annual__c</fullName>
    <description>Enhancement products Rollup - Annual Price - SE -5/27/21</description>
    <inlineHelpText>Rollup of Enhancement products (Total of list price)</inlineHelpText>
    <label>DEPRECATE Enhancement ARR (Opp)</label>
    <summarizedField>OpportunityLineItem.List_Price_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>DESKTOP_ENHANCEMENT, DESKTOP_SPLA</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>