force-app/main/default/objects/Opportunity/fields/Enhancement_Total_Pro_rated__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Total_Pro_rated__c</fullName>
    <description>Rollup of Enhancement products (Total of list price) - SE -5/27/21</description>
    <inlineHelpText>Rollup of Enhancement products (Total of total price)</inlineHelpText>
    <label>Perpetual Total (Opp-Billing)</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>DESKTOP_ENHANCEMENT, DESKTOP_PRODUCTS, DESKTOP_SPLA, PERPETUAL_DISCOUNT</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>