force-app/main/default/objects/Opportunity/fields/Enhancement_Total_VB_Annual__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Total_VB_Annual__c</fullName>
    <description>Enhancement products Rollup - Annual Price - SE -6/07/21</description>
    <inlineHelpText>Rollup of Enhancement products (Total of list price)</inlineHelpText>
    <label>OLD_Enhancement Total_V2 (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>