force-app/main/default/objects/Opportunity/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>F&amp;SCM</fullName>
            </value>
            <value>
                <fullName>Acumatica</fullName>
            </value>
            <value>
                <fullName>Epicor</fullName>
            </value>
            <value>
                <fullName>Infor</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>