force-app/main/default/objects/Opportunity/fields/ERP_Current_Opp__c.field-meta.xml
<CustomField>
    <fullName>ERP_Current_Opp__c</fullName>
    <label>ERP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP_Platform</valueSetName>
    </valueSet>
</CustomField>