force-app/main/default/objects/Opportunity/fields/Estimated_New_ARR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_New_ARR__c</fullName>
    <formula>IF( Has_Reseller_Opp__c = False,  Account.Total_ARR__c + ARR__c , Account.Total_ARR__c + Related_Reseller_Opp__r.ARR__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD_Estimated New ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>