force-app/main/default/objects/Opportunity/fields/Estimated_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Hours__c</fullName>
    <label>Estimated # of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>