force-app/main/default/objects/Opportunity/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <description>If Net ARR is populated, this field equals Net ARR. Otherwise, it is a rep&apos;s estimation.</description>
    <label>Estimated Value ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>