force-app/main/default/objects/Opportunity/fields/Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>Executive_Email__c</fullName>
    <label>Executive Email</label>
    <type>Date</type>
</CustomField>