force-app/main/default/objects/Opportunity/fields/Existing_Cavallo_SalesPad_user__c.field-meta.xml
<CustomField>
    <fullName>Existing_Cavallo_SalesPad_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are they an existing Cavallo SalesPad user?</inlineHelpText>
    <label>Existing Cavallo SalesPad user?</label>
    <type>Checkbox</type>
</CustomField>