force-app/main/default/objects/Opportunity/fields/Existing_GP_or_New_GP__c.field-meta.xml
<CustomField>
    <fullName>Existing_GP_or_New_GP__c</fullName>
    <inlineHelpText>Does the person you&apos;re selling this to already own Dynamics GP, or will they also be purchasing Dynamics GP?</inlineHelpText>
    <label>Existing GP or New GP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing GP</fullName>
            </value>
            <value>
                <fullName>New GP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>