force-app/main/default/objects/Opportunity/fields/Expected_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close__c</fullName>
    <description>This field tracks the expected close date once the opportunity is closed.  This is for evaluating accuracy of our forecasting.</description>
    <label>Expected Close</label>
    <type>Date</type>
</CustomField>