force-app/main/default/objects/Opportunity/fields/Experience_Fit__c.field-meta.xml
<CustomField>
    <fullName>Experience_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Fit</label>
    <type>Checkbox</type>
</CustomField>