force-app/main/default/objects/Opportunity/fields/FF_Description2__c.field-meta.xml
<CustomField>
    <fullName>FF_Description2__c</fullName>
    <formula>&quot;Our product is missing a key piece of functionality for them&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Description.</label>
    <type>Text</type>
</CustomField>