force-app/main/default/objects/Opportunity/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>TEXT( YEAR( CloseDate ) )</formula>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>