force-app/main/default/objects/Opportunity/fields/Formula_ARR_Closed__c.field-meta.xml
<CustomField>
    <fullName>Formula_ARR_Closed__c</fullName>
    <formula>IF(   ISPICKVAL(StageName, &apos;Closed Won&apos;),   ARR__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>- Used only for dashboards.</inlineHelpText>
    <label>Formula ARR Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>