force-app/main/default/objects/Opportunity/fields/Formula_ARR_Open__c.field-meta.xml
<CustomField>
    <fullName>Formula_ARR_Open__c</fullName>
    <formula>IF( IsClosed =False,    ARR__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula ARR Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>