force-app/main/default/objects/Opportunity/fields/Found_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Found_Alternative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Found Alternative</label>
    <type>Checkbox</type>
</CustomField>