force-app/main/default/objects/Opportunity/fields/Found_Alternative_Notes__c.field-meta.xml
<CustomField>
    <fullName>Found_Alternative_Notes__c</fullName>
    <label>Found Alternative Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>