force-app/main/default/objects/Opportunity/fields/Functional_Fit__c.field-meta.xml
<CustomField>
    <fullName>Functional_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Functional Fit</label>
    <type>Checkbox</type>
</CustomField>