force-app/main/default/objects/Opportunity/fields/Future_Purchase_Potential__c.field-meta.xml
<CustomField>
    <fullName>Future_Purchase_Potential__c</fullName>
    <inlineHelpText># of Potential future seats/users in the next 24 months:
What additional products are not being purchased now, but expected to be sold in 24 months?</inlineHelpText>
    <label>Future Purchase Potential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>