force-app/main/default/objects/Opportunity/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>Date expected to &apos;Go Live&apos;</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>