force-app/main/default/objects/Opportunity/fields/Google_Drive_Additional_Links__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Additional_Links__c</fullName>
    <label>Google Drive Additional Links</label>
    <type>Url</type>
</CustomField>