force-app/main/default/objects/Opportunity/fields/GSPDashProf__Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Amount_Won__c</fullName>
    <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>