force-app/main/default/objects/Opportunity/fields/GSPDashProf__Close_Date_Month_Extensions__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Close_Date_Month_Extensions__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Close Date Month Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>