force-app/main/default/objects/Opportunity/fields/GSPDashProf__Date_Opportunity_was_Closed__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Date_Opportunity_was_Closed__c</fullName>
    <label>Date Opportunity was Closed</label>
    <type>Date</type>
</CustomField>