force-app/main/default/objects/Opportunity/fields/GSPDashProf__Days_Open__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Days_Open__c</fullName>
    <formula>IF(ISBLANK( GSPDashProf__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
GSPDashProf__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>