force-app/main/default/objects/Opportunity/fields/GSPDashProf__Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Days_Since_Last_Stage_Change__c</fullName>
    <formula>IF(ISBLANK(GSPDashProf__Date_Opportunity_was_Closed__c),
TODAY()-GSPDashProf__Last_Stage_Change_Date__c,
GSPDashProf__Date_Opportunity_was_Closed__c - GSPDashProf__Last_Stage_Change_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>