force-app/main/default/objects/Opportunity/fields/GSPDashProf__Last_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>GSPDashProf__Last_Stage_Change_Date__c</fullName>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>