force-app/main/default/objects/Opportunity/fields/Has_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Contact Role</label>
    <type>Checkbox</type>
</CustomField>