force-app/main/default/objects/Opportunity/fields/Has_Reseller_Opp__c.field-meta.xml
<CustomField>
    <fullName>Has_Reseller_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Reseller Opp</label>
    <type>Checkbox</type>
</CustomField>