force-app/main/default/objects/Opportunity/fields/I_own_it__c.field-meta.xml
<CustomField>
    <fullName>I_own_it__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I_own_it</label>
    <type>Text</type>
</CustomField>