force-app/main/default/objects/Opportunity/fields/ia_crm__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Type__c</fullName>
    <label>Project Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Fixed Fee &amp; Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>