force-app/main/default/objects/Opportunity/fields/ia_crm__Budget__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>