force-app/main/default/objects/Opportunity/fields/ia_crm__Department_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department_ID__c</fullName>
    <label>Department ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>900</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>