force-app/main/default/objects/Opportunity/fields/ia_crm__Initial_Renewal_Intacct_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Initial_Renewal_Intacct_Contract_Id__c</fullName>
    <description>Used into Renewal flows for creating links between initial Intacct Contracts and validations.</description>
    <label>Initial Renewal Intacct Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>