force-app/main/default/objects/Opportunity/fields/ia_crm__Intacct_Sync_Errors_1__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Sync_Errors_1__c</fullName>
    <label>Intacct Sync Errors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>