force-app/main/default/objects/Opportunity/fields/ia_crm__Intacct_Sync_Status_Image_1__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Sync_Status_Image_1__c</fullName>
    <formula>CASE( ia_crm__Intacct_Sync_Status_1__c , &quot;OK&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;OK&quot;), &quot;Error&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Error&quot;), &quot;Warning&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Warning&quot;), TEXT(ia_crm__Intacct_Sync_Status_1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Sync Status</label>
    <type>Text</type>
</CustomField>